--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<!-- Copyright -->
+<!-- 
+	Copyright 2014 Git. Training
+	Adding changes before rebasing conflicts
+ -->
 <head>
 	<title>Very Respectful Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
